--- a/epic-launch.html
+++ b/epic-launch.html
@@ -11,9 +11,9 @@
 
 	<script>
 		FHIR.oauth2.authorize({
-      'client_id': '6eeb1b28-47d2-4674-8c98-9746c0e0ae7d',
+      'client_id': '3d5a8cfb-2011-4081-96bd-8e38895a7deb',
       'scope':  'PATIENT.READ, PATIENT.SEARCH, OBSERVATION.READ, OBSERVATION.SEARCH',
-      'redirect_uri': 'https://epic.patientdev.repl.co/app.html'
+      'redirect_uri': 'https://raw.githack.com/farhan2206/bay-smart-on-fhir-sample-app/main/call.html'
     });
 	</script>
 
